release: complete demo validation baseline